Define router path
To detect HTTP controller

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/Ui/Http/Controller/
+        namespace: App\Ui\Http\Controller\
     type: attribute
