--- a/app/.env.test
+++ b/app/.env.test
@@ -1,3 +1,3 @@
 API_KEY=ywsemqs2w6nr3dcspyubx42d
 SECRET_KEY=GWwN7P26cn
-HOTEL_BEDS_API=https://api.test.hotelbeds.com/hotel-api/1.0/hotels
+HOTEL_BEDS_API=https://api.test.hotelbeds.com/hotel-api/1.0/
