Introduce HotelBeds Availability api

--- a/app/composer.json
+++ b/app/composer.json
@@ -8,6 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofphp/php-cs-fixer": "^3.13",
+        "guzzlehttp/guzzle": "^7.5",
+        "symfony/browser-kit": "6.2.*",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
